[gd_scene load_steps=3 format=3 uid="uid://clcrusxyllm1b"]

[ext_resource type="Script" path="res://Login.gd" id="1_de34e"]
[ext_resource type="PackedScene" uid="uid://cpb42fn3leaxp" path="res://Avatar.tscn" id="2_vdmhy"]

[node name="Login" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_de34e")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.4
anchor_right = 0.496
anchor_bottom = 0.6
offset_bottom = 2.39999

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label_Username" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Username"

[node name="LineEdit_Username" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label_Password" type="Label" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Password"

[node name="LineEdit_Password" type="LineEdit" parent="CanvasLayer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Button_Login" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Login"

[node name="Button_Register" type="Button" parent="CanvasLayer/VBoxContainer/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Register"

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.562
anchor_top = 0.275
anchor_right = 0.762
anchor_bottom = 0.751
offset_bottom = 30.0

[node name="Control" type="Control" parent="CanvasLayer/Panel"]
layout_mode = 1
anchor_left = 0.48
anchor_top = -0.2
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Avatar" parent="CanvasLayer/Panel/Control" instance=ExtResource("2_vdmhy")]

[node name="FaceContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.066
anchor_right = 0.9
anchor_bottom = 0.258

[node name="FaceLabel" type="Label" parent="CanvasLayer/Panel/FaceContainer"]
layout_mode = 2
text = "Face:"
horizontal_alignment = 1

[node name="FaceButtonContainer" type="HBoxContainer" parent="CanvasLayer/Panel/FaceContainer"]
layout_mode = 2

[node name="ButtonLeftFace" type="Button" parent="CanvasLayer/Panel/FaceContainer/FaceButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="ButtonRightFace" type="Button" parent="CanvasLayer/Panel/FaceContainer/FaceButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="HairContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.258
anchor_right = 0.9
anchor_bottom = 0.451

[node name="HairLabel" type="Label" parent="CanvasLayer/Panel/HairContainer"]
layout_mode = 2
text = "Hair"
horizontal_alignment = 1

[node name="HairButtonContainer" type="HBoxContainer" parent="CanvasLayer/Panel/HairContainer"]
layout_mode = 2

[node name="ButtonLeftHair" type="Button" parent="CanvasLayer/Panel/HairContainer/HairButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="ButtonRightHair" type="Button" parent="CanvasLayer/Panel/HairContainer/HairButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="HairColorContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.453
anchor_right = 0.9
anchor_bottom = 0.65

[node name="HairColorLabel" type="Label" parent="CanvasLayer/Panel/HairColorContainer"]
layout_mode = 2
text = "Hair Color"
horizontal_alignment = 1

[node name="HairColorButtonContainer" type="HBoxContainer" parent="CanvasLayer/Panel/HairColorContainer"]
layout_mode = 2

[node name="ButtonLeftHairColor" type="Button" parent="CanvasLayer/Panel/HairColorContainer/HairColorButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"

[node name="ButtonRightHairColor" type="Button" parent="CanvasLayer/Panel/HairColorContainer/HairColorButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"

[node name="ButtonOk" type="Button" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -31.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 0
text = "Okay"
